--- a/css/apropos.css
+++ b/css/apropos.css
@@ -47,6 +47,7 @@
 .premiere figure img{
     width: 100%;
     height: 100%;
+    object-fit: cover;
     border-radius: 20px;
     border: 5px solid transparent;
     box-shadow: 5px -5px 0 0 var(--orange-color);
@@ -85,6 +86,7 @@
 .deuxieme figure img{
     width: 100%;
     height: 100%;
+    object-fit: cover;
     border-radius: 20px;
     border: 5px solid transparent;
     box-shadow: 5px -5px 0 0 var(--orange-color);
