--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,7 @@ header nav ul a.active{
     border-radius: 20px;
     -webkit-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
-    background-color: var(--orange-color);
+    background-color: #222;
 }
 
 /*Slider*/
